# Neuralcam

./: .dockerignore  .flake8  .gitignore  Dockerfile.develop  Makefile  README.md  docker-compose.yml  example_usage.py  pyproject.toml
.cursor/rules/: backend.mdc  code-review.mdc  testing.mdc
scripts/: add_dependency.py
src/Contexts/Recording/Profiles/Application/Projections/: ProfileSnapshot.py  ProfileSnapshotProjector.py
src/Contexts/Recording/Profiles/Domain/Entities/: Profile.py
src/Contexts/Recording/Profiles/Domain/Examples/: ProfileScheduleExample.py
src/Contexts/Recording/Profiles/Domain/ValueObjects/: DateRangeValueObject.py  ScheduleConfigurationValueObject.py  WeekDaysValueObject.py  __init__.py
src/Contexts/Recording/RecordingSessions/Application/DTO/: ProfileDTO.py
src/Contexts/Recording/RecordingSessions/Application/Queries/: GetProfilesQuery.py  GetProfilesQueryResponse.py
src/Contexts/Recording/RecordingSessions/Application/UseCases/: RecordProfilesUseCase.py
src/Contexts/Recording/RecordingSessions/Domain/Contracts/: PathEnsurer.py  TaskManager.py  VideoRecorder.py
src/Contexts/Recording/RecordingSessions/Domain/Entities/: Profile.py  RecordingSession.py
src/Contexts/Recording/RecordingSessions/Domain/Events/: CreatedRecordingSessionDomainEvent.py  FinishedRecordingSessionDomainEvent.py
src/Contexts/Recording/RecordingSessions/Domain/Exceptions/: InvalidRtspUriException.py  MalformedUriException.py
src/Contexts/Recording/RecordingSessions/Domain/Services/: RecordingService.py
src/Contexts/Recording/RecordingSessions/Domain/ValueObjects/: OutputPath.py  ProfileFolderPath.py  ProfileId.py  ProfileName.py  RecordingSessionDuration.py  RecordingSessionId.py  StartDate.py  Uri.py
src/Contexts/Recording/RecordingSessions/Infrastructure/Services/: LocalPathEnsurer.py  PyAvVideoRecorder.py
src/Contexts/Recording/Videos/: README.md  __init__.py
src/Contexts/Recording/Videos/Application/: __init__.py
src/Contexts/Recording/Videos/Application/DTO/: __init__.py
src/Contexts/Recording/Videos/Application/EventHandlers/: MoveVideoOnFinishedRecordingSession.py  __init__.py
src/Contexts/Recording/Videos/Application/Queries/: __init__.py
src/Contexts/Recording/Videos/Application/UseCases/: MoveVideoUseCase.py  MoveVideosUseCase.py  __init__.py
src/Contexts/Recording/Videos/Domain/: __init__.py
src/Contexts/Recording/Videos/Domain/Contracts/: VideoFileManager.py  VideoRepository.py  VideoUploader.py  __init__.py
src/Contexts/Recording/Videos/Domain/Entities/: Video.py  __init__.py
src/Contexts/Recording/Videos/Domain/Events/: FinishedRecordingSessionIntegrationEvent.py  VideoDeletedDomainEvent.py  VideoUploadedDomainEvent.py  __init__.py
src/Contexts/Recording/Videos/Domain/Exceptions/: VideoFileOperationException.py  VideoNotFoundException.py  (+2 more)
src/Contexts/Recording/Videos/Infrastructure/: __init__.py
src/Contexts/SharedKernel/Domain/: AggregateRoot.py  Configuration.py  DomainEvent.py  EventBusInterface.py  LoggerInterface.py  TaskRunnerInterface.py  TimeProviderInterface.py  UuidGenerator.py
src/Contexts/SharedKernel/Domain/Exceptions/: ConfigurationException.py
src/Contexts/SharedKernel/Domain/MessageBus/: QueryBus.py  QueryHandler.py
src/Contexts/SharedKernel/Domain/ValueObjects/: DayRangeValueObject.py  DayValueObject.py  IntValueObject.py  RequiredStringValueObject.py  StringValueObject.py  TimeRangeValueObject.py  TimeValueObject.py  UuidValueObject.py
src/Contexts/SharedKernel/Infrastructure/Services/: ConsoleLogger.py  ThreadTaskManager.py
tests/Contexts/SharedKernel/: __init__.py
tests/Contexts/SharedKernel/Infrastructure/: __init__.py
tests/Contexts/SharedKernel/Infrastructure/Services/: __init__.py
(+29 files in other folders)
